Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -436,22 +436,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'city': 'Pittsburgh'}"
+       "{'City': 'Pittsburgh'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pittsburgh = dict(city='Pittsburgh')\n",
+    "pittsburgh = dict(City='Pittsburgh')\n",
     "pittsburgh"
    ]
   },
